force-app/main/default/objects/AP_NoteOrAttachment__c/AP_NoteOrAttachment__c.object-meta.xml
<CustomObject>
    <description>This is a junction object between Action Plan and Notes &amp; Attachments object. This object will store the reference of the Notes Or Attachments custom object</description>
    <label>AP Note Or Attachment</label>
    <nameField>
        <displayFormat>APNA-{00000000}</displayFormat>
        <label>Note Or Attachment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Notes Or Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>