force-app/main/default/objects/AP_NoteOrAttachment__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <label>Action Plan</label>
    <referenceTo>Action_Plan__c</referenceTo>
    <relationshipLabel>Notes &amp; Attachments</relationshipLabel>
    <relationshipName>AP_Note_Attachment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>