force-app/main/default/objects/AP_NoteOrAttachment__c/fields/CheckIsParentAPMC__c.field-meta.xml
<CustomField>
    <fullName>CheckIsParentAPMC__c</fullName>
    <description>Checks to see if the note belongs to a Min corro case so it can be shared to MAGS.</description>
    <formula>Action_Plan__r.Created_by_MAGS_Officer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckIsParentAPMC</label>
    <type>Checkbox</type>
</CustomField>