force-app/main/default/objects/AP_NoteOrAttachment__c/fields/Note_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Note_Attachment__c</fullName>
    <label>Note &amp; Attachment</label>
    <referenceTo>NoteOrAttachment__c</referenceTo>
    <relationshipLabel>AP Notes &amp; Attachments</relationshipLabel>
    <relationshipName>AP_Note_Attachment</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>